docs: add content html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
                   </li>
 
                   <li class="menu__item">
+                     <a class="menu__link" href="tel:+375257425395">
+                        <span class="menu__name">Phone</span>
+                        <span class="menu__text">+375&nbsp25&nbsp742&nbsp53&nbsp95</span>
+                     </a>
+                  </li>
+
+                  <li class="menu__item">
+                     <a class="menu__link" href="#">
+                        <span class="menu__name">Telegram</span>
+                        <span class="menu__text">+375&nbsp25&nbsp742&nbsp53 &nbsp95</span>
+                     </a>
+                  </li>
+
+                  <li class="menu__item">
                      <a class="menu__link" href="#">
                         <span class="menu__name">GitHub</span>
                         <span class="menu__text">NataliaPV</span>
@@ -276,7 +290,6 @@
                </p>
             </div>
          </section>
-
       </div>
    </main>
    <footer class="footer" id="footer">
