--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <li class="menu__item">
                      <a class="menu__link" href="#">
                         <span class="menu__name">Location</span>
-                        <span class="menu__text">Minsk, Belarus</span>
+                        <span class="menu__text">Minsk,&nbsp;Belarus</span>
                      </a>
                   </li>
 
@@ -40,14 +40,14 @@
                   <li class="menu__item">
                      <a class="menu__link" href="tel:+375257425395">
                         <span class="menu__name">Phone</span>
-                        <span class="menu__text">+375&nbsp25&nbsp742&nbsp53&nbsp95</span>
+                        <span class="menu__text">+375&nbsp;25&nbsp;742&nbsp;53&nbsp;95</span>
                      </a>
                   </li>
 
                   <li class="menu__item">
                      <a class="menu__link" href="#">
                         <span class="menu__name">Telegram</span>
-                        <span class="menu__text">+375&nbsp25&nbsp742&nbsp53 &nbsp95</span>
+                        <span class="menu__text">+375&nbsp;25&nbsp;742&nbsp;53&nbsp;95</span>
                      </a>
                   </li>
 
@@ -297,7 +297,7 @@
          <h2 class="footer__title sr-only">footer</h2>
 
          <p class="footer__text section__text">
-            Minsk, 2022
+            Minsk,&nbsp;2022
          </p>
       </div>
    </footer>
